# fast_lcs

./: CMakeLists.txt  README.md  check.cu  dp.cpp  fastlcs.cpp  fastlcs.cu  fastlcs_cpu.h  fastlcs_cu.h  fastlcs_nomap.cu  fastlcs_nomap.h  gen.cpp  profiler.cpp  sw.cpp
example/double/: 1.txt  2.txt  3.txt
example/multi/: 1.txt
example/test/: 11_50  14_50  2_100  2_1000  2_150  2_200  2_250  2_300  2_350  2_400  2_450  2_50  2_500  2_800  5_50  8_50
test/: gen.py  gen2.py
